--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"bcryptjs": "^2.4.3",
 		"class-validator": "^0.14.1",
 		"cors": "^2.8.5",
 		"dotenv": "^16.4.5",
 		"express": "^4.19.2",
 		"express-async-errors": "^3.1.1",
 		"inversify": "^6.0.2",
+		"jsonwebtoken": "^9.0.2",
+		"mongodb": "^6.8.0",
 		"mongoose": "^8.5.1",
 		"reflect-metadata": "^0.2.2"
 	},
