--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
 		"reflect-metadata": "^0.2.2"
 	},
 	"devDependencies": {
+		"@types/bcryptjs": "^2.4.6",
 		"@types/cors": "^2.8.17",
 		"@types/express": "^4.17.21",
 		"@types/jest": "^29.5.12",
+		"@types/jsonwebtoken": "^9.0.6",
 		"@types/mongoose": "^5.11.97",
 		"@types/node": "^20.14.2",
 		"jest": "^29.7.0",
