--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"jsonwebtoken": "^9.0.2",
 		"mongodb": "^6.8.0",
 		"mongoose": "^8.5.1",
+		"nodemailer": "^6.9.14",
 		"reflect-metadata": "^0.2.2"
 	},
 	"devDependencies": {
@@ -33,6 +34,7 @@
 		"@types/jsonwebtoken": "^9.0.6",
 		"@types/mongoose": "^5.11.97",
 		"@types/node": "^20.14.2",
+		"@types/nodemailer": "^6.4.15",
 		"jest": "^29.7.0",
 		"nodemon": "^3.1.0",
 		"prettier": "^3.2.5",
